--- a/_config.yml
+++ b/_config.yml
@@ -2524,4 +2524,222 @@ issues:
     pages:
     - 298
     - 339
-
+- issue: 2016-1
+  year: 2016
+  volume: 8
+  num: 1
+  month: aug
+  articles:
+  - title: Editorial
+    author: Michael Lawrence
+    slug: editorial
+    pages:
+    - 4
+    - 4
+  - heading: Contributed Research Articles
+  - title: 'metaplus: An R Package for the Analysis of Robust Meta-Analysis and Meta-Regression'
+    author: Dr Ken J. Beath
+    slug: beath
+    pages:
+    - 5
+    - 16
+  - title: Gender Prediction Methods Based on First Names with genderizeR
+    author: Kamil Wais
+    slug: wais
+    pages:
+    - 17
+    - 37
+  - title: 'quickpsy: An R Package to Fit Psychometric Functions for Multiple Groups'
+    author:
+    - Daniel Linares
+    - Joan López-Moliner
+    slug: linares-na
+    pages:
+    - 38
+    - 47
+  - title: 'FWDselect: An R Package for Variable Selection in Regression Models'
+    author:
+    - Marta Sestelo
+    - Nora M. Villanueva
+    - Luís Meira-Machado
+    - Javier Roca-Pardiñas
+    slug: sestelo-villanueva-meiramachado-etal
+    pages:
+    - 48
+    - 64
+  - title: An Interactive Survey Application for Validating Social Network Analysis
+      Techniques
+    author:
+    - Mitchell Joblin
+    - Wolfgang Mauerer
+    slug: joblin-mauerer
+    pages:
+    - 65
+    - 74
+  - title: Exploring Interaction Effects in Factorial Studies using the hiddenf Package
+      in R
+    author:
+    - Christopher T. Franck
+    - Jason A. Osborne
+    slug: franck-osborne
+    pages:
+    - 75
+    - 88
+  - title: Heteroscedastic Censored and Truncated Regression with crch
+    author:
+    - Jakob W. Messner
+    - Georg J. Mayr
+    - Achim Zeileis
+    slug: messner-mayr-zeileis
+    pages:
+    - 89
+    - 97
+  - title: Model Builder for Item Factor Analysis with OpenMx
+    author:
+    - Joshua Pritikin
+    - Karen Schmidt
+    slug: pritikin-schmidt
+    pages:
+    - 98
+    - 119
+  - title: Spatio-Temporal Interpolation using gstat
+    author:
+    - Benedikt Gräler
+    - Edzer Pebesma
+    - Gerard Heuvelink
+    slug: na-pebesma-heuvelink
+    pages:
+    - 120
+    - 134
+  - title: 'SWMPr: An R Package for Retrieving, Organizing, and Analyzing Environmental
+      Data for Estuaries'
+    author: Marcus W Beck
+    slug: beck
+    pages:
+    - 135
+    - 148
+  - title: 'CryptRndTest: An R Package for Testing the Cryptographic Randomness'
+    author:
+    - Haydar Demirhan
+    - Nihan Bitirim
+    slug: demirhan-bitirim
+    pages:
+    - 149
+    - 163
+  - title: 'scmamp: Statistical Comparison of Multiple Algorithms in Multiple Problems'
+    author:
+    - Borja Calvo
+    - Guzmán Santafé
+    slug: calvo-na
+    pages:
+    - 164
+    - 172
+  - title: 'keyplayer: An R Package for Locating Key Players in Social Networks'
+    author:
+    - Weihua An
+    - Yu-Hsin Liu
+    slug: an-liu
+    pages:
+    - 173
+    - 184
+  - title: 'SchemaOnRead: A Package for Schema-on-Read in R'
+    author: Michael North
+    slug: north
+    pages:
+    - 185
+    - 191
+  - title: Crowdsourced Data Preprocessing with R and Amazon Mechanical Turk
+    author: Thomas J. Leeper
+    slug: leeper
+    pages:
+    - 192
+    - 204
+  - title: 'mclust 5: Clustering, Classification and Density Estimation Using Gaussian
+      Finite Mixture Models'
+    author:
+    - Luca Scrucca
+    - Michael Fop
+    - T. Brendan Murphy
+    - Adrian E. Raftery
+    slug: scrucca-fop-murphy-etal
+    pages:
+    - 205
+    - 233
+  - title: 'clustering.sc.dp: Optimal Clustering with Sequential Constraint by Using
+      Dynamic Programming'
+    author: Tibor Szkaliczki
+    slug: szkaliczki
+    pages:
+    - 234
+    - 243
+  - title: 'progenyClust: an R package for Progeny Clustering'
+    author:
+    - Chenyue W. Hu
+    - Amina A. Qutub
+    slug: hu-qutub
+    pages:
+    - 244
+    - 254
+  - title: Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R
+    author: Erik Wright
+    slug: wright
+    pages:
+    - 255
+    - 262
+  - title: R Packages to Aid in Handling Web Access Logs
+    author:
+    - Oliver Keyes
+    - Bob Rudis
+    - Jay Jacobs
+    slug: keyes-rudis-jacobs
+    pages:
+    - 263
+    - 269
+  - title: 'GMDH: An R Package for Short Term Forecasting via GMDH - Type Neural Network
+      Algorithms'
+    author:
+    - Osman Dag
+    - Ceylan Yozgatligil
+    slug: yozgatligil-dag
+    pages:
+    - 270
+    - 277
+  - title: 'sbtools: A Package Connecting R to Cloud-Based Data for Collaborative
+      Online Research'
+    author:
+    - Luke A Winslow
+    - Scott Chamberlain
+    - Alison P Appling
+    - Jordan S Read
+    slug: winslow-chamberlain-appling-etal
+    pages:
+    - 278
+    - 289
+  - heading: News and Notes
+  - title: 'Conference Report: useR! 2016'
+    author: Joe Rickert
+    slug: user2016
+    pages:
+    - 290
+    - 292
+  - title: Changes on CRAN
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
+    pages:
+    - 293
+    - 294
+  - title: News from the Bioconductor Project
+    author: The Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 295
+    - 296
+  - title: Changes in R
+    author: The R Core Team
+    slug: r-changes
+    pages:
+    - 297
+    - 306
+ 
