republish 2016-1 with fewer missing articles

--- a/_config.yml
+++ b/_config.yml
@@ -2,153 +2,6 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - title: Heteroscedastic Censored and Truncated Regression with crch
-    slug: messner-mayr-zeileis
-    author:
-    - Jakob W. Messner
-    - Georg J. Mayr
-    - Achim Zeileis
-  - title: An Interactive Survey Application for Validating Social Network Analysis
-      Techniques
-    slug: joblin-mauerer
-    author:
-    - Mitchell Joblin
-    - Wolfgang Mauerer
-  - title: 'quickpsy: An R Package to Fit Psychometric Functions for Multiple Groups'
-    slug: linares-lopez-moliner
-    author:
-    - Daniel Linares
-    - Joan López-Moliner
-    bibauthor:
-    - Daniel Linares
-    - Joan L{\' o}pez-Moliner
-  - title: 'scmamp: Statistical Comparison of Multiple Algorithms in Multiple Problems'
-    slug: calvo-santafe
-    author:
-    - Borja Calvo
-    - Guzmán Santafé
-    bibauthor:
-    - Borja Calvo
-    - Guzm{\' a}n Santaf{\' e}
-  - title: 'Stylometry with R: A Package for Computational Text Analysis'
-    slug: eder-rybicki-kestemont
-    author:
-    - Maciej Eder
-    - Jan Rybicki
-    - Mike Kestemont
-  - title: 'rTableICC: An R Package for Random Generation of 2*2*K and R*C Contingency
-      Tables'
-    slug: demirhan
-    author: Haydar Demirhan
-  - title: 'SWMPr: An R Package for Retrieving, Organizing, and Analyzing Environmental
-      Data for Estuaries'
-    slug: beck
-    author: Marcus W Beck
-  - title: 'SchemaOnRead: A Package for Schema-on-Read in R'
-    slug: north
-    author: Michael North
-  - title: Bridges associated to fractional Brownian motion and multifractional Brownian
-      motion.
-    slug: sophie-brouste-istas
-    author:
-    - Lambert-Lacroix Sophie
-    - Alexandre Brouste
-    - Jacques Istas
-  - title: Exploring Interaction Effects in Factorial Studies using the hiddenf Package
-      in R
-    slug: franck-osborne
-    author:
-    - Christopher T. Franck
-    - Jason A. Osborne
-  - title: Model Builder for Item Factor Analysis with OpenMx
-    slug: pritikin-schmidt
-    author:
-    - Joshua Pritikin
-    - Karen Schmidt
-  - title: 'CryptRndTest: An R Package for Testing the Cryptographic Randomness'
-    slug: demirhan-bitirim
-    author:
-    - Haydar Demirhan
-    - Nihan Bitirim
-  - title: 'Variable Clustering in High-Dimensional Linear Regression: The R Package
-      clere'
-    slug: jacques-yengo-biernacki-etal
-    author:
-    - Julien Jacques
-    - Loïc Yengo
-    - Christophe Biernacki
-    - Mickael Canouil
-  - title: 'FWDselect: An R Package for Variable Selection in Regression Models'
-    slug: sestelo-villanueva-meiramachado-etal
-    author:
-    - Marta Sestelo
-    - Nora M. Villanueva
-    - Luís Meira-Machado
-    - Javier Roca-Pardiñas
-  - title: 'clustering.sc.dp: Optimal Clustering with Sequential Constraint by Using
-      Dynamic Programming'
-    slug: szkaliczki
-    author: Tibor Szkaliczki
-  - title: 'keyplayer: An R Package for Locating Key Players in Social Networks'
-    slug: an-liu
-    author:
-    - Weihua An
-    - Yu-Hsin Liu
-  - title: 'progenyClust: an R package for Progeny Clustering'
-    slug: hu-qutub
-    author:
-    - Chenyue W. Hu
-    - Amina A. Qutub
-  - title: Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R
-    slug: wright
-    author: Erik Wright
-  - title: 'metaplus: An R Package for the Analysis of Robust Meta-Analysis and Meta-Regression'
-    slug: beath
-    author: Dr Ken J. Beath
-  - title: Crowdsourced Data Preprocessing with R and Amazon Mechanical Turk
-    slug: leeper
-    author: Thomas J. Leeper
-  - title: Spatio-Temporal Interpolation using gstat
-    slug: na-pebesma-heuvelink
-    author:
-    - Benedikt Gräler
-    - Edzer Pebesma
-    - Gerard Heuvelink
-  - title: R Packages to Aid in Handling Web Access Logs
-    slug: keyes-rudis-jacobs
-    author:
-    - Oliver Keyes
-    - Bob Rudis
-    - Jay Jacobs
-  - title: 'GMDH: An R Package for Short Term Forecasting via GMDH - Type Neural Network
-      Algorithms'
-    slug: yozgatligil-dag
-    author:
-    - Osman Dag
-    - Ceylan Yozgatligil
-  - title: 'mclust 5: Clustering, Classification and Density Estimation Using Gaussian
-      Finite Mixture Models'
-    slug: scrucca-fop-murphy-etal
-    author:
-    - Luca Scrucca
-    - Michael Fop
-    - T. Brendan Murphy
-    - Adrian E. Raftery
-  - title: 'Maps, coordinate reference systems and visualising geographic data with
-      mapmisc'
-    slug: brown
-    author: Patrick Brown
-  - title: 'sbtools: A package connecting R to cloud-based data for collaborative
-      online research'
-    slug: winslow-chamberlain-appling-etal
-    author:
-    - Luke A Winslow
-    - Scott Chamberlain
-    - Alison P Appling
-    - Jordan S Read
-  - title: Gender Prediction Methods Based on First Names with genderizeR
-    slug: wais
-    author: Kamil Wais
   - title: 'multipleNCC: Inverse probability weighting of nested case-control data'
     slug: stoer-samuelsen
     author:
@@ -2549,14 +2402,57 @@ issues:
     pages:
     - 17
     - 37
+  - title: Conditional Fractional Gaussian Fields with the Package FieldSim
+    author:
+    - Lambert-Lacroix Sophie
+    - Alexandre Brouste
+    - Jacques Istas
+    slug: sophie-brouste-istas
+    pages:
+    - 38
+    - 47
+  - title: 'rTableICC: An R Package for Random Generation of 2$\times$2$\times$K and
+      R$\times$C Contingency Tables'
+    author: Haydar Demirhan
+    slug: demirhan
+    pages:
+    - 48
+    - 63
+  - title: Maps, Coordinate Reference Systems and Visualising Geographic Data with
+      mapmisc
+    author: Patrick Brown
+    slug: brown
+    pages:
+    - 64
+    - 91
+  - title: 'Variable Clustering in High-Dimensional Linear Regression: The R Package
+      clere'
+    author:
+    - Julien Jacques
+    - Loïc Yengo
+    - Christophe Biernacki
+    - Mickael Canouil
+    slug: jacques-yengo-biernacki-etal
+    pages:
+    - 92
+    - 106
+  - title: 'Stylometry with R: A Package for Computational Text Analysis'
+    author:
+    - Maciej Eder
+    - Jan Rybicki
+    - Mike Kestemont
+    slug: eder-rybicki-kestemont
+    pages:
+    - 107
+    - 121
   - title: 'quickpsy: An R Package to Fit Psychometric Functions for Multiple Groups'
     author:
     - Daniel Linares
     - Joan López-Moliner
     slug: linares-na
     pages:
-    - 38
-    - 47
+    - 122
+    - 131
   - title: 'FWDselect: An R Package for Variable Selection in Regression Models'
     author:
     - Marta Sestelo
@@ -2565,8 +2461,8 @@ issues:
     - Javier Roca-Pardiñas
     slug: sestelo-villanueva-meiramachado-etal
     pages:
-    - 48
-    - 64
+    - 132
+    - 148
   - title: An Interactive Survey Application for Validating Social Network Analysis
       Techniques
     author:
@@ -2574,8 +2470,8 @@ issues:
     - Wolfgang Mauerer
     slug: joblin-mauerer
     pages:
-    - 65
-    - 74
+    - 149
+    - 158
   - title: Exploring Interaction Effects in Factorial Studies using the hiddenf Package
       in R
     author:
@@ -2583,8 +2479,8 @@ issues:
     - Jason A. Osborne
     slug: franck-osborne
     pages:
-    - 75
-    - 88
+    - 159
+    - 172
   - title: Heteroscedastic Censored and Truncated Regression with crch
     author:
     - Jakob W. Messner
@@ -2592,16 +2488,16 @@ issues:
     - Achim Zeileis
     slug: messner-mayr-zeileis
     pages:
-    - 89
-    - 97
+    - 173
+    - 181
   - title: Model Builder for Item Factor Analysis with OpenMx
     author:
     - Joshua Pritikin
     - Karen Schmidt
     slug: pritikin-schmidt
     pages:
-    - 98
-    - 119
+    - 182
+    - 203
   - title: Spatio-Temporal Interpolation using gstat
     author:
     - Benedikt Gräler
@@ -2609,51 +2505,51 @@ issues:
     - Gerard Heuvelink
     slug: na-pebesma-heuvelink
     pages:
-    - 120
-    - 134
+    - 204
+    - 218
   - title: 'SWMPr: An R Package for Retrieving, Organizing, and Analyzing Environmental
       Data for Estuaries'
     author: Marcus W Beck
     slug: beck
     pages:
-    - 135
-    - 148
+    - 219
+    - 232
   - title: 'CryptRndTest: An R Package for Testing the Cryptographic Randomness'
     author:
     - Haydar Demirhan
     - Nihan Bitirim
     slug: demirhan-bitirim
     pages:
-    - 149
-    - 163
+    - 233
+    - 247
   - title: 'scmamp: Statistical Comparison of Multiple Algorithms in Multiple Problems'
     author:
     - Borja Calvo
     - Guzmán Santafé
     slug: calvo-na
     pages:
-    - 164
-    - 172
+    - 248
+    - 256
   - title: 'keyplayer: An R Package for Locating Key Players in Social Networks'
     author:
     - Weihua An
     - Yu-Hsin Liu
     slug: an-liu
     pages:
-    - 173
-    - 184
+    - 257
+    - 268
   - title: 'SchemaOnRead: A Package for Schema-on-Read in R'
     author: Michael North
     slug: north
     pages:
-    - 185
-    - 191
+    - 269
+    - 275
   - title: Crowdsourced Data Preprocessing with R and Amazon Mechanical Turk
     author: Thomas J. Leeper
     slug: leeper
     pages:
-    - 192
-    - 204
+    - 276
+    - 288
   - title: 'mclust 5: Clustering, Classification and Density Estimation Using Gaussian
       Finite Mixture Models'
     author:
@@ -2663,29 +2559,29 @@ issues:
     - Adrian E. Raftery
     slug: scrucca-fop-murphy-etal
     pages:
-    - 205
-    - 233
+    - 289
+    - 317
   - title: 'clustering.sc.dp: Optimal Clustering with Sequential Constraint by Using
       Dynamic Programming'
     author: Tibor Szkaliczki
     slug: szkaliczki
     pages:
-    - 234
-    - 243
+    - 318
+    - 327
   - title: 'progenyClust: an R package for Progeny Clustering'
     author:
     - Chenyue W. Hu
     - Amina A. Qutub
     slug: hu-qutub
     pages:
-    - 244
-    - 254
+    - 328
+    - 338
   - title: Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R
     author: Erik Wright
     slug: wright
     pages:
-    - 255
-    - 262
+    - 339
+    - 346
   - title: R Packages to Aid in Handling Web Access Logs
     author:
     - Oliver Keyes
@@ -2693,8 +2589,8 @@ issues:
     - Jay Jacobs
     slug: keyes-rudis-jacobs
     pages:
-    - 263
-    - 269
+    - 347
+    - 353
   - title: 'GMDH: An R Package for Short Term Forecasting via GMDH - Type Neural Network
       Algorithms'
     author:
@@ -2702,8 +2598,8 @@ issues:
     - Ceylan Yozgatligil
     slug: yozgatligil-dag
     pages:
-    - 270
-    - 277
+    - 354
+    - 361
   - title: 'sbtools: A Package Connecting R to Cloud-Based Data for Collaborative
       Online Research'
     author:
@@ -2713,33 +2609,32 @@ issues:
     - Jordan S Read
     slug: winslow-chamberlain-appling-etal
     pages:
-    - 278
-    - 289
+    - 362
+    - 373
   - heading: News and Notes
   - title: 'Conference Report: useR! 2016'
     author: Joe Rickert
     slug: user2016
     pages:
-    - 290
-    - 292
+    - 374
+    - 376
   - title: Changes on CRAN
     author:
     - Kurt Hornik
     - Achim Zeileis
     slug: cran
     pages:
-    - 293
-    - 294
+    - 377
+    - 378
   - title: News from the Bioconductor Project
     author: The Bioconductor Team
     slug: bioconductor
     pages:
-    - 295
-    - 296
+    - 379
+    - 380
   - title: Changes in R
     author: The R Core Team
     slug: r-changes
     pages:
-    - 297
-    - 306
- 
+    - 381
+    - 390
