--- a/_config.yml
+++ b/_config.yml
@@ -2381,7 +2381,8 @@ issues:
   year: 2016
   volume: 8
   num: 1
-  month: aug
+  month: Aug.
+  bibmonth: aug
   articles:
   - title: Editorial
     author: Michael Lawrence
@@ -2391,14 +2392,17 @@ issues:
     - 4
   - heading: Contributed Research Articles
   - title: 'metaplus: An R Package for the Analysis of Robust Meta-Analysis and Meta-Regression'
-    author: Dr Ken J. Beath
+    author: Ken J. Beath
     slug: beath
+    bibtitle: '{metaplus}: An {R} Package for the Analysis of Robust Meta-Analysis
+      and Meta-Regression'
     pages:
     - 5
     - 16
   - title: Gender Prediction Methods Based on First Names with genderizeR
     author: Kamil Wais
     slug: wais
+    bibtitle: Gender Prediction Methods Based on First Names with {genderizeR}
     pages:
     - 17
     - 37
@@ -2408,13 +2412,16 @@ issues:
     - Alexandre Brouste
     - Jacques Istas
     slug: sophie-brouste-istas
+    bibtitle: Conditional Fractional Gaussian Fields with the Package {FieldSim}
     pages:
     - 38
     - 47
-  - title: 'rTableICC: An R Package for Random Generation of 2$\times$2$\times$K and
-      R$\times$C Contingency Tables'
+  - title: 'rTableICC: An R Package for Random Generation of 2*2*K and R*C Contingency
+      Tables'
     author: Haydar Demirhan
     slug: demirhan
+    bibtitle: '{rTableICC}: An {R} Package for Random Generation of 2*2*K and R*C
+      Contingency Tables'
     pages:
     - 48
     - 63
@@ -2422,6 +2429,8 @@ issues:
       mapmisc
     author: Patrick Brown
     slug: brown
+    bibtitle: Maps, Coordinate Reference Systems and Visualising Geographic Data with
+      {mapmisc}
     pages:
     - 64
     - 91
@@ -2433,6 +2442,13 @@ issues:
     - Christophe Biernacki
     - Mickael Canouil
     slug: jacques-yengo-biernacki-etal
+    bibtitle: 'Variable Clustering in High-Dimensional Linear Regression: The {R}
+      Package {clere}'
+    bibauthor:
+    - Julien Jacques
+    - Lo{\" i}c Yengo
+    - Christophe Biernacki
+    - Mickael Canouil
     pages:
     - 92
     - 106
@@ -2442,6 +2458,7 @@ issues:
     - Jan Rybicki
     - Mike Kestemont
     slug: eder-rybicki-kestemont
+    bibtitle: 'Stylometry with {R}: A Package for Computational Text Analysis'
     pages:
     - 107
     - 121
@@ -2450,6 +2467,11 @@ issues:
     - Daniel Linares
     - Joan López-Moliner
     slug: linares-na
+    bibtitle: '{quickpsy}: An {R} Package to Fit Psychometric Functions for Multiple
+      Groups'
+    bibauthor:
+    - Daniel Linares
+    - Joan L{\' o}pez-Moliner
     pages:
     - 122
     - 131
@@ -2460,6 +2482,12 @@ issues:
     - Luís Meira-Machado
     - Javier Roca-Pardiñas
     slug: sestelo-villanueva-meiramachado-etal
+    bibtitle: '{FWDselect}: An {R} Package for Variable Selection in Regression Models'
+    bibauthor:
+    - Marta Sestelo
+    - Nora M. Villanueva
+    - Lu{\' i}s Meira-Machado
+    - Javier Roca-Pardi{\~ n}as
     pages:
     - 132
     - 148
@@ -2478,6 +2506,8 @@ issues:
     - Christopher T. Franck
     - Jason A. Osborne
     slug: franck-osborne
+    bibtitle: Exploring Interaction Effects in Factorial Studies using the {hiddenf}
+      Package in {R}
     pages:
     - 159
     - 172
@@ -2487,6 +2517,7 @@ issues:
     - Georg J. Mayr
     - Achim Zeileis
     slug: messner-mayr-zeileis
+    bibtitle: Heteroscedastic Censored and Truncated Regression with {crch}
     pages:
     - 173
     - 181
@@ -2495,6 +2526,7 @@ issues:
     - Joshua Pritikin
     - Karen Schmidt
     slug: pritikin-schmidt
+    bibtitle: Model Builder for Item Factor Analysis with {OpenMx}
     pages:
     - 182
     - 203
@@ -2504,6 +2536,11 @@ issues:
     - Edzer Pebesma
     - Gerard Heuvelink
     slug: na-pebesma-heuvelink
+    bibtitle: Spatio-Temporal Interpolation using {gstat}
+    bibauthor:
+    - Benedikt Gr{\" a}ler
+    - Edzer Pebesma
+    - Gerard Heuvelink
     pages:
     - 204
     - 218
@@ -2511,6 +2548,8 @@ issues:
       Data for Estuaries'
     author: Marcus W Beck
     slug: beck
+    bibtitle: '{SWMPr}: An {R} Package for Retrieving, Organizing, and Analyzing Environmental
+      Data for Estuaries'
     pages:
     - 219
     - 232
@@ -2519,6 +2558,7 @@ issues:
     - Haydar Demirhan
     - Nihan Bitirim
     slug: demirhan-bitirim
+    bibtitle: '{CryptRndTest}: An {R} Package for Testing the Cryptographic Randomness'
     pages:
     - 233
     - 247
@@ -2527,6 +2567,11 @@ issues:
     - Borja Calvo
     - Guzmán Santafé
     slug: calvo-na
+    bibtitle: '{scmamp}: Statistical Comparison of Multiple Algorithms in Multiple
+      Problems'
+    bibauthor:
+    - Borja Calvo
+    - Guzm{\' a}n Santaf{\' e}
     pages:
     - 248
     - 256
@@ -2535,18 +2580,21 @@ issues:
     - Weihua An
     - Yu-Hsin Liu
     slug: an-liu
+    bibtitle: '{keyplayer}: An {R} Package for Locating Key Players in Social Networks'
     pages:
     - 257
     - 268
   - title: 'SchemaOnRead: A Package for Schema-on-Read in R'
     author: Michael North
     slug: north
+    bibtitle: '{SchemaOnRead}: A Package for Schema-on-Read in {R}'
     pages:
     - 269
     - 275
   - title: Crowdsourced Data Preprocessing with R and Amazon Mechanical Turk
     author: Thomas J. Leeper
     slug: leeper
+    bibtitle: Crowdsourced Data Preprocessing with {R} and Amazon Mechanical Turk
     pages:
     - 276
     - 288
@@ -2558,6 +2606,8 @@ issues:
     - T. Brendan Murphy
     - Adrian E. Raftery
     slug: scrucca-fop-murphy-etal
+    bibtitle: '{mclust} 5: Clustering, Classification and Density Estimation Using
+      Gaussian Finite Mixture Models'
     pages:
     - 289
     - 317
@@ -2565,6 +2615,8 @@ issues:
       Dynamic Programming'
     author: Tibor Szkaliczki
     slug: szkaliczki
+    bibtitle: '{clustering.sc.dp}: Optimal Clustering with Sequential Constraint by
+      Using Dynamic Programming'
     pages:
     - 318
     - 327
@@ -2573,15 +2625,26 @@ issues:
     - Chenyue W. Hu
     - Amina A. Qutub
     slug: hu-qutub
+    bibtitle: '{progenyClust}: an {R} package for Progeny Clustering'
     pages:
     - 328
     - 338
+  - title: 'statmod: Probability Calculations for the Inverse Gaussian Distribution'
+    author:
+    - Goknur Giner
+    - Gordon K Smyth
+    slug: giner-smyth
+    bibtitle: '{statmod}: Probability Calculations for the Inverse Gaussian Distribution'
+    pages:
+    - 339
+    - 351
   - title: Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R
     author: Erik Wright
     slug: wright
+    bibtitle: Using {DECIPHER} {v2.0} to Analyze Big Biological Sequence Data in {R}
     pages:
-    - 339
-    - 346
+    - 352
+    - 359
   - title: R Packages to Aid in Handling Web Access Logs
     author:
     - Oliver Keyes
@@ -2589,17 +2652,28 @@ issues:
     - Jay Jacobs
     slug: keyes-rudis-jacobs
     pages:
-    - 347
-    - 353
+    - 360
+    - 366
+  - title: Nonparametric Tests for the Interaction in Two-way Factorial Designs Using
+      R
+    author: Jos Feys
+    slug: feys
+    bibtitle: Nonparametric Tests for the Interaction in Two-way Factorial Designs
+      Using {R}
+    pages:
+    - 367
+    - 378
   - title: 'GMDH: An R Package for Short Term Forecasting via GMDH - Type Neural Network
       Algorithms'
     author:
     - Osman Dag
     - Ceylan Yozgatligil
     slug: yozgatligil-dag
+    bibtitle: '{GMDH}: An {R} Package for Short Term Forecasting via {GMDH} - Type
+      Neural Network Algorithms'
     pages:
-    - 354
-    - 361
+    - 379
+    - 386
   - title: 'sbtools: A Package Connecting R to Cloud-Based Data for Collaborative
       Online Research'
     author:
@@ -2608,33 +2682,38 @@ issues:
     - Alison P Appling
     - Jordan S Read
     slug: winslow-chamberlain-appling-etal
+    bibtitle: '{sbtools}: A Package Connecting {R} to Cloud-Based Data for Collaborative
+      Online Research'
     pages:
-    - 362
-    - 373
+    - 387
+    - 398
   - heading: News and Notes
   - title: 'Conference Report: useR! 2016'
     author: Joe Rickert
     slug: user2016
+    bibtitle: 'Conference Report: {useR}! 2016'
     pages:
-    - 374
-    - 376
+    - 399
+    - 401
   - title: Changes on CRAN
     author:
     - Kurt Hornik
     - Achim Zeileis
     slug: cran
+    bibtitle: Changes on {CRAN}
     pages:
-    - 377
-    - 378
+    - 402
+    - 403
   - title: News from the Bioconductor Project
     author: The Bioconductor Team
     slug: bioconductor
     pages:
-    - 379
-    - 380
+    - 404
+    - 405
   - title: Changes in R
     author: The R Core Team
     slug: r-changes
+    bibtitle: Changes in {R}
     pages:
-    - 381
-    - 390
+    - 406
+    - 415
