put some articles online

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,59 @@ issues:
   - title: Geographic visualization and analysis in R with tigris
     slug: walker
     author: Kyle Walker
+  - title: 'QPot: An R Package for Stochastic Differential Equation Quasi-Potential
+      Analysis'
+    slug: nolting-moore-stieha-etal
+    author:
+    - Ben C. Nolting
+    - Christopher M. Moore
+    - Christopher R. Stieha
+    - Maria K. Cameron
+    - Karen C. Abbott
+  - title: 'Simulating Correlated Binary and Multinomial Responses under Marginal
+      Model Specification: The SimCorMultRes Package'
+    slug: touloumis
+    author: Anestis Touloumis
+  - title: Within-item multidimensional IRT models in R
+    slug: bacci-bartolucci
+    author:
+    - Silvia Bacci
+    - Francesco Bartolucci
+  - title: 'Using Subgroup Discovery Algorithms in R: the SDR Package'
+    slug: na-charte-na-etal
+    author:
+    - Ángel M. García
+    - Fracisco Charte
+    - Pedro González
+    - Cristóbal J. Carmona
+    - María J. del Jesús
+  - title: 'Distance Measures for Time Series in R: the TSdist Package'
+    slug: mori-mori-mendiburu-etal
+    author:
+    - Usue Mori
+    - Usue Mori
+    - Alexander Mendiburu
+    - Jose A. Lozano
+  - title: 'eiCompare: Comparing ecological inference estimates across EI and EI:RxC'
+    slug: collingwood-oskooii-garciarios-etal
+    author:
+    - Loren Collingwood
+    - Kassra Oskooii
+    - Sergio Garcia-Rios
+    - Matt Barreto
+  - title: 'hdm: High-Dimensional Metrics'
+    slug: spindler-chernozhukov-hansen
+    author:
+    - Martin Spindler
+    - Victor Chernozhukov
+    - Chris Hansen
+  - title: 'ggfortify: Unified Interface to Visualize Statistical Result of Popular
+      R Packages'
+    slug: tang-horikoshi-li
+    author:
+    - Yuan Tang
+    - Massaki Horikoshi
+    - Wenxuan Li
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -2717,3 +2770,4 @@ issues:
     pages:
     - 406
     - 415
+
