fix 2016-32 title and author

--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ issues:
     author:
     - Silvia Bacci
     - Francesco Bartolucci
-  - title: 'Using Subgroup Discovery Algorithms in R: the SDR Package'
+  - title: 'Subgroup Discovery with Evolutionary Fuzzy Systems in R: the SDEFSR Package'
     slug: na-charte-na-etal
     author:
     - Ángel M. García
-    - Fracisco Charte
+    - Francisco Charte
     - Pedro González
     - Cristóbal J. Carmona
     - María J. del Jesús
