--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ issues:
       Model Specification: The SimCorMultRes Package'
     slug: touloumis
     author: Anestis Touloumis
-  - title: Within-item multidimensional IRT models in R
+  - title: Two-Tier Latent Class IRT Models in R
     slug: bacci-bartolucci
     author:
     - Silvia Bacci
