--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,43 @@ issues:
     - Yuan Tang
     - Massaki Horikoshi
     - Wenxuan Li
+  - title: 'mixtox: An R Package for Mixture Toxicity Assessment'
+    slug: zhu-chen
+    author:
+    - Xiangwei Zhu
+    - Jianyi Chen
+  - title: Calculating Biological Module Enrichment or Depletion and Visualizing Data
+      on Large-scale Molecular Maps with ACSNMineR and RNaviCell packages
+    slug: deveau-barillot-boeva-etal
+    author:
+    - Paul Deveau
+    - Emmanuel Barillot
+    - Valentina Boeva
+    - Andrei Zinovyev
+    - Eric Bonnet
+  - title: 'dCovTS: Distance Covariance/Correlation for Time Series'
+    slug: pitsillou-fokianos
+    author:
+    - Maria Pitsillou
+    - Konstantinos Fokianos
+  - title: Variants of Simple Correspondence Analysis
+    slug: lombardo-beh
+    author:
+    - Rosaria Lombardo
+    - Eric J. Beh
+  - title: Design of the TRONCO BioConductor Package for TRanslational ONCOlogy
+    slug: ramazzotti-antoniotti-caravagna-etal
+    author:
+    - Daniele Ramazzotti
+    - Marco Antoniotti
+    - Giulio Caravagna
+    - Luca De Sano
+    - Alex Graudenzi
+    - Giancarlo Mauri
+    - Bud Mishra
+  - title: 'comf: An R Package for Thermal Comfort Studies'
+    slug: schweiker
+    author: Marcel Schweiker
 - issue: 2009-1
   year: 2009
   volume: 1
