--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ issues:
     slug: tang-horikoshi-li
     author:
     - Yuan Tang
-    - Massaki Horikoshi
+    - Massaaki Horikoshi
     - Wenxuan Li
   - title: 'mixtox: An R Package for Mixture Toxicity Assessment'
     slug: zhu-chen
@@ -100,6 +100,41 @@ issues:
   - title: 'comf: An R Package for Thermal Comfort Studies'
     slug: schweiker
     author: Marcel Schweiker
+  - title: 'Escape from Boxland: Generating a Library of High-Dimensional Geometric
+      Shapes'
+    slug: schloerke-wickham-cook-etal
+    author:
+    - Barret Schloerke
+    - Hadley Wickham
+    - Dianne Cook
+    - and Heike Hofmann
+  - title: An Introduction to Principal Surrogate Evaluation with the pseval Package
+    slug: sachs-gabriel
+    author:
+    - Michael C Sachs
+    - Erin E Gabriel
+  - title: 'micompr: An R Package for Multivariate Independent Comparison of Observations'
+    slug: fachada-rodrigues-lopes-etal
+    author:
+    - Nuno Fachada
+    - João Rodrigues
+    - Vitor V. Lopes
+    - Rui C. Martins
+    - Agostinho C. Rosa
+  - title: 'nmfgpu4R: GPU-Accelerated Computation of the Non-Negative Matrix Factorization
+      (NMF) Using CUDA Capable Hardware'
+    slug: koitka-friedrich
+    author:
+    - Sven Koitka
+    - Christoph M. Friedrich
+  - title: 'quantreg.nonpar: An R Package for Performing Nonparametric Series Quantile
+      Regression'
+    slug: lipsitz-belloni-chernozhukov-etal
+    author:
+    - Michael Lipsitz
+    - Alexandre Belloni
+    - Victor Chernozhukov
+    - Ivan Fernandez-Val
 - issue: 2009-1
   year: 2009
   volume: 1
