fix Masaaki spelling

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ issues:
     slug: tang-horikoshi-li
     author:
     - Yuan Tang
-    - Massaaki Horikoshi
+    - Masaaki Horikoshi
     - Wenxuan Li
   - title: 'mixtox: An R Package for Mixture Toxicity Assessment'
     slug: zhu-chen
