put some articles online

--- a/_config.yml
+++ b/_config.yml
@@ -135,6 +135,42 @@ issues:
     - Alexandre Belloni
     - Victor Chernozhukov
     - Ivan Fernandez-Val
+  - title: 'Qtools: A Collection of Models and Tools for Quantile Inference'
+    slug: geraci
+    author: Marco Geraci
+  - title: 'mctest: An R Package for Detection of Collinearity Among Regressors'
+    slug: imdadullah-aslam-altaf
+    author:
+    - Muhammad Imdadullah
+    - Muhammad Aslam
+    - Saima Altaf
+  - title: 'Ake: An R Package for Discrete and Continuous Associated Kernel Estimations'
+    slug: some-wansouwe-kokonendji
+    author:
+    - Sobom M. Somé
+    - Wanbitching E. Wansouwé
+    - Célestin C. Kokonendji
+  - title: Measurement units in R
+    slug: pebesma-mailund-hiebert
+    author:
+    - Edzer Pebesma
+    - Thomas Mailund
+    - James Hiebert
+  - title: 'diverse: an R Package to Measure Diversity in Complex Systems'
+    slug: guevara-hartmann-mendoza
+    author:
+    - Miguel R. Guevara
+    - Dominik Hartmann
+    - Marcelo Mendoza
+  - title: 'water: Tools and Functions to estimate Actual Evapotranspiration using
+      Land Surface Energy Balance Models in R'
+    slug: olmedo-ortegafarias-delafuentesaiz-etal
+    author:
+    - Guillermo Federico Olmedo
+    - Samuel Ortega-Farías
+    - Daniel de la Fuente-Sáiz
+    - David Fonseca-Luengo
+    - Fernando Fuentes-Peñailillo
 - issue: 2009-1
   year: 2009
   volume: 1
