all articles for the next issue are now online

--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,51 @@ issues:
     - Daniel de la Fuente-Sáiz
     - David Fonseca-Luengo
     - Fernando Fuentes-Peñailillo
+  - title: 'easyROC: An Interactive Web-tool for ROC Curve Analysis Using R Language
+      Environment'
+    slug: goksuluk-korkmaz-zararsiz-etal
+    author:
+    - Dincer Goksuluk
+    - Selcuk Korkmaz
+    - Gokmen Zararsiz
+    - Ergun Karaagaoglu
+  - title: 'QPot: An R Package for Stochastic Differential Equation Quasi-Potential
+      Analysis'
+    slug: moore-stieha-nolting-etal
+    author: ' "Christopher M. Moore"'
+  - title: Normal Tolerance Interval Procedures in the tolerance Package
+    slug: young
+    author: Derek Young
+  - title: 'RNRFA: an R package to retrieve, filter and visualize data from the UK
+      National River Flow Archive'
+    slug: vitolo-fry-buytaert
+    author:
+    - Claudia Vitolo
+    - Matthew Fry
+    - Wouter Buytaert
+  - title: 'condSURV: An R Package for the Estimation of the Conditional Survival
+      Function for Ordered Multivariate Failure Time Data'
+    slug: meiramachado-sestelo
+    author:
+    - Luis Meira-Machado
+    - Marta Sestelo
+  - title: Computing Pareto Frontiers and Database Preferences with the rPref Package
+    slug: roocks
+    author: Patrick Roocks
+  - title: 'Weighted Distance Based Discriminant Analysis: The R package  WeDiBaDis'
+    slug: sola-irigoien-mestres-etal
+    author:
+    - Concepcion Arenas Sola
+    - Itziar Irigoien
+    - Francesc Mestres
+    - Concepción Arenas
+  - title: 'Weighted Distance Based Discriminant Analysis: The R package  WeDiBaDis'
+    slug: sola-irigoien-mestres-etal
+    author:
+    - Concepcion Arenas Sola
+    - Itziar Irigoien
+    - Francesc Mestres
+    - Concepción Arenas
 - issue: 2009-1
   year: 2009
   volume: 1
